...
    >
      {/* Feed tab */}
      <Tabs.Screen
        name="feed/index"
        options={{
          title: 'Near Me',
          tabBarButtonTestID: 'tab-feed',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="location-outline" size={size} color={color} />
          ),
        }}
      />

...

      {/* Profile tab */}
      <Tabs.Screen
        name="profile/index"
        options={{
          title: 'Profile',
          tabBarButtonTestID: 'tab-profile',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="person-outline" size={size} color={color} />
          ),
        }}
      />

...
